[gd_scene load_steps=6 format=3 uid="uid://ckaii44b1b55b"]

[ext_resource type="Texture2D" uid="uid://b2sg5tivpij25" path="res://arts/Dialouge_bg.png" id="1_akjto"]
[ext_resource type="Script" path="res://script/DialogueContainer.gd" id="1_vuvmi"]
[ext_resource type="Texture2D" uid="uid://d3n4kjcugsoyg" path="res://arts/neighbor-sprite.png" id="2_fjm5s"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="4_guahk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_egekl"]
atlas = ExtResource("2_fjm5s")
region = Rect2(20, 0, 60, 50)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vuvmi")

[node name="Dialogue" type="VSplitContainer" parent="."]
layout_mode = 0
offset_right = 728.0
offset_bottom = 192.0
theme_override_constants/separation = 10
theme_override_constants/minimum_grab_thickness = 0
split_offset = -30

[node name="HFlowContainer" type="HFlowContainer" parent="Dialogue"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 0

[node name="TextureRect2" type="TextureRect" parent="Dialogue/HFlowContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("1_akjto")

[node name="PanelContainer" type="BoxContainer" parent="Dialogue/HFlowContainer/TextureRect2"]
clip_contents = true
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
alignment = 1

[node name="Icon" type="Sprite2D" parent="Dialogue/HFlowContainer/TextureRect2/PanelContainer"]
position = Vector2(40, 40)
scale = Vector2(1.59, 1.65)
texture = SubResource("AtlasTexture_egekl")

[node name="TextureRect" type="TextureRect" parent="Dialogue/HFlowContainer"]
custom_minimum_size = Vector2(110, 30)
layout_mode = 2
size_flags_vertical = 8
texture = ExtResource("1_akjto")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/HFlowContainer/TextureRect"]
layout_mode = 0
offset_right = 110.0
offset_bottom = 30.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0

[node name="Name" type="Label" parent="Dialogue/HFlowContainer/TextureRect/MarginContainer"]
layout_mode = 2
text = "Anh Long"

[node name="TextureRect2" type="TextureRect" parent="Dialogue"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("1_akjto")
expand_mode = 1
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/TextureRect2"]
layout_mode = 0
offset_right = 704.0
offset_bottom = 102.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Dialogue" type="Label" parent="Dialogue/TextureRect2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Nói cái j đó"
autowrap_mode = 2
text_overrun_behavior = 1

[node name="EzDialogue" type="Node" parent="Dialogue"]
script = ExtResource("4_guahk")

[connection signal="dialogue_generated" from="Dialogue/EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
